<resources>
    <string name="app_name">InstagramLoginPage</string>
    <string name="textview">English (United State)</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="phone_number_email_or_username">Phone number,email or username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_your_login_details">Forgot your login details?</string>
    <string name="get_help_loggin_in">Get help loggin in</string>
    <string name="or">OR</string>
    <string name="todo4">TODO</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="log_in_with_facebook">Log in with facebook</string>
</resources>