<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="279dp"
            android:layout_height="73dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/instagram" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="12dp"
            android:layout_marginTop="32dp"
            android:hint="@string/phone_number_email_or_username"
            android:minHeight="48dp"
            tools:ignore="TextFields,VisualLintTextFieldSize"
            android:background="@drawable/edittext_bg"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="@drawable/edittext_bg"
            android:drawablePadding="12dp"
            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:autofillHints=""
            tools:ignore="TextFields,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3897F0"
            android:padding="16dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_login_details"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#333333"
                android:text="@string/get_help_loggin_in"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#E7E7E7"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/or"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#E7E7E7"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/facebookicon"
                android:contentDescription="@string/todo4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_with_facebook"
                android:layout_marginStart="4dp"
                android:textStyle="bold"
                android:textColor="#3897F0"/>




        </LinearLayout>





    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="#E7E7E7"
        android:layout_above="@id/bottom_view"
        tools:ignore="ObsoleteLayoutParam" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/bottom_view">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#333333"
            android:text="@string/sign_up"/>

    </LinearLayout>



</RelativeLayout>